--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -2,22 +2,20 @@ name: Docker Image CI
 
 on:
   push:
-    branches: [ "master" ]
+    branches: ["master"]
   pull_request:
-    branches: [ "master" ]
+    branches: ["master"]
 
 jobs:
-
   build:
-
     runs-on: self-hosted
 
     steps:
-    - uses: actions/checkout@v3
-    - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
-    - name : deploy Docker image
-      run: |
-             docker ps | grep "react-app"  | awk '{print "docker container stop " $1}' | bash
-             docker run -d --network bridge -p 3000:3000 react-app:latest
-      shell : bash
+      - uses: actions/checkout@v3
+      - name: Build the Docker image
+        run: docker build . --file Dockerfile --tag react-app
+      - name: deploy Docker image
+        run: |
+          docker ps | grep "react-app"  | awk '{print "docker container stop " $1}' | bash
+          docker run -d --network bridge -p 3000:3000 react-app:latest
+        shell: bash
